# gerador_de_trades

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ativos.txt  docker-compose.yml  main.py  oldreadme.md  pyproject.toml
Arquivos/: __init__.py  ativos.py  db_admin.py  gerador.py  menu_usuario.py  tests_init.py
app/: main.py  queries.py  trades.py
app/gerenciador_sql/: ativo.py  trade.py
app/gerenciador_trade/: gerador.py
app/tests/: test_trade_gerenciador.py
database/: database.py
gerenciador/: ativo.py  database.py  gerador.py  main.py  menu.py  trade.py
gerenciador_de_trades/: ativo.py  database.py  gerador.py  menu.py  trade.py
gerenciador_trade/: db_admin.py  gerador.py  main.py
models/: models_main.py
tests/: test_gerenciador.py  test_gerenciador_de_trades.py  test_trades.py
