[tool.poetry]
name = "gerador_de_trades"
version = "0.1.0"
description = ""
authors = ["Catrofe <82066310+Catrofe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.14.8"
mysql-connector = "^2.2.9"
pre-commit = "^2.17.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
