[tool.poetry]
name = "gerenciador_de_trades"
version = "0.1.0"
description = ""
authors = ["Catrofe <lord.rico10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.14.8"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "6.2.x"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
